--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
 
   http: ^1.2.1
   location: ^6.0.2
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
