--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   location: ^6.0.2
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
+  flutter_map: ^6.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
