add pictures to create houses

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -54,5 +54,11 @@
     <string>Necesitamos tu ubicación para mostrarte las casas más cercanas a ti.</string>
     <key>NSLocationAlwaysUsageDescription</key>
     <string>Necesitamos tu ubicación para mostrarte las casas más cercanas a ti.</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>Necesitamos acceso a tu galería para que puedas seleccionar las fotos de la propiedad.</string>
+    <key>NSCameraUsageDescription</key>
+    <string>Necesitamos acceso a tu cámara por si quieres tomar una foto de la propiedad.</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>Necesitamos acceso a tu micrófono por si quieres grabar un video de la propiedad.</string>
 </dict>
 </plist>
