--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http: ^1.2.1
-  location: ^6.0.2
+  http: ^1.4.0
+  location: ^8.0.1
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
-  flutter_map: ^6.1.0
-  flutter_card_swiper: ^7.0.0
+  flutter_map: ^8.1.1
+  flutter_card_swiper: ^7.0.2
+  image_picker: ^1.1.2
+  firebase_storage: ^12.0.1
+  uuid: ^4.5.1
+  dotted_border: ^3.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -51,7 +55,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
