--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,7 @@ dependencies:
 
   http: ^1.4.0
   location: ^8.0.1
-  firebase_core: ^3.14.0
+  firebase_core: ^3.15.0
   firebase_auth: ^5.6.0
   flutter_map: ^8.1.1
   flutter_card_swiper: ^7.0.2
@@ -57,6 +57,7 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^6.0.0
   flutter_launcher_icons: ^0.14.4
+  cloud_firestore: ^5.6.10
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
